# university

./: .gitignore
BASE-class/: hw3-6_crawler.py
HS1/script/: MY_README  Makefile  README  hs-vis_ss10.sty  literatur.bib  main.tex  template.tex  vgtc.cls
HS1/script/chapters/: intro.tex  (+5 more)
HS2/slides/: hs2_slides.tex  hs2_slides_2.tex  literatur.bib
HS2/summary/: literature.bib  summary.tex  wc.txt
MIS-class/e03/: 2.py  4.py  points.mat
ML-class/e02-linearRegression/: CMakeLists.txt  main.cpp
ML-class/e03-classification/: CMakeLists.txt  main.cpp  plotLin  plotQuad
ML-class/e03-classification/data/: digit_label.txt  digit_pca.txt
ML-class/e03-classification/results/: e03_2_lin.txt  e03_2_quad.txt  e03_3_lin.txt  e03_3_quad.txt
ML-class/e04-pca-pls/: CMakeLists.txt  Makefile  main.cpp
ML-class/e07-bayes-basics/: dice.m
ML-class/e08-gaussian-processes/: a.m
ML-class/e09-graphical-models/: a.m
ML-class/e10-em/: a.m  b.m  drawGaussian.m
OPT-class/: e01.py  e04.py  e04b.py  e05.py  e05b.py  e07.py
PARC-class/: final_astar.py  hw01_monte_carlo.py  hw03_6_Gui.py  hw03_6_ParticleFilter.py  hw03_particle.py  hw04_dp.py  hw05_motion.py  hw05_motion_2.py  hw05_motion_3.py  hw6_1.py  hw6_3.py  unit01.py  unit03.py  unit04_1.py  unit04_2.py
RL-class/e03/: Makefile  mc.cpp  tiles.c  tiles.h
RL-class/e06/: rmax.m
robot-class/: copy.sh
robot-class/01-kinematics/: main.cpp  pyplot.py  res01  res02  res03  res04
robot-class/05-car/: main.cpp
robot-class/05-dynamics/: 1d_point_mass.py  1d_point_mass_trajectory.py
robot-class/06-kalmanSLAM/: main.cpp
(+14 files in other folders)
